; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wimax/i2400m/extr_usb-rx.c_i2400mu_rx_size_grow.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/net/wimax/i2400m/extr_usb-rx.c_i2400mu_rx_size_grow.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.i2400mu = type { i32, %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.device }
%struct.device = type { i32 }

@.str = private unnamed_addr constant [54 x i8] c"RX: expected size grew to %zu [adjusted -8] from %zu\0A\00", align 1
@.str.1 = private unnamed_addr constant [40 x i8] c"RX: expected size grew to %zu from %zu\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.i2400mu*)* @i2400mu_rx_size_grow to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @i2400mu_rx_size_grow(%struct.i2400mu* %0) #0 {
  %2 = alloca %struct.i2400mu*, align 8
  %3 = alloca %struct.device*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  store %struct.i2400mu* %0, %struct.i2400mu** %2, align 8
  %6 = load %struct.i2400mu*, %struct.i2400mu** %2, align 8
  %7 = getelementptr inbounds %struct.i2400mu, %struct.i2400mu* %6, i32 0, i32 1
  %8 = load %struct.TYPE_2__*, %struct.TYPE_2__** %7, align 8
  %9 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %8, i32 0, i32 0
  store %struct.device* %9, %struct.device** %3, align 8
  store i64 512, i64* %5, align 8
  %10 = load %struct.i2400mu*, %struct.i2400mu** %2, align 8
  %11 = getelementptr inbounds %struct.i2400mu, %struct.i2400mu* %10, i32 0, i32 0
  %12 = load i32, i32* %11, align 8
  %13 = mul nsw i32 2, %12
  %14 = sext i32 %13 to i64
  store i64 %14, i64* %4, align 8
  %15 = load i64, i64* %4, align 8
  %16 = urem i64 %15, 512
  %17 = icmp eq i64 %16, 0
  br i1 %17, label %18, label %27

18:                                               ; preds = %1
  %19 = load i64, i64* %4, align 8
  %20 = sub i64 %19, 8
  store i64 %20, i64* %4, align 8
  %21 = load %struct.device*, %struct.device** %3, align 8
  %22 = load i64, i64* %4, align 8
  %23 = load %struct.i2400mu*, %struct.i2400mu** %2, align 8
  %24 = getelementptr inbounds %struct.i2400mu, %struct.i2400mu* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 8
  %26 = call i32 @d_printf(i32 1, %struct.device* %21, i8* getelementptr inbounds ([54 x i8], [54 x i8]* @.str, i64 0, i64 0), i64 %22, i32 %25)
  br label %34

27:                                               ; preds = %1
  %28 = load %struct.device*, %struct.device** %3, align 8
  %29 = load i64, i64* %4, align 8
  %30 = load %struct.i2400mu*, %struct.i2400mu** %2, align 8
  %31 = getelementptr inbounds %struct.i2400mu, %struct.i2400mu* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = call i32 @d_printf(i32 1, %struct.device* %28, i8* getelementptr inbounds ([40 x i8], [40 x i8]* @.str.1, i64 0, i64 0), i64 %29, i32 %32)
  br label %34

34:                                               ; preds = %27, %18
  %35 = load i64, i64* %4, align 8
  ret i64 %35
}

declare dso_local i32 @d_printf(i32, %struct.device*, i8*, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
